add start-coin tool

--- a/deploy-coin/Makefile
+++ b/deploy-coin/Makefile
@@ -1,4 +1,7 @@
-all: create
+all: create-coin start-coin
 
 create-coin:
 	go build -o $(GOPATH)/bin/create-coin ./cmd/create
+
+start-coin:
+	go build -o $(GOPATH)/bin/start-coin ./cmd/start
