--- a/coin-api/cmd/config.toml
+++ b/coin-api/cmd/config.toml
@@ -4,7 +4,7 @@ User="aaa"
 Password="123"
 CertFile=""
 TLS=false
-BlockExplorer="https://api.blockchain.info/charts/balance?cors=true&format=json&lang=en&address="
+BlockExplorer="https://api.blockchain.info"
 
 [skycoin]
 Host="0.0.0.0"
