--- a/otc/config.toml
+++ b/otc/config.toml
@@ -3,6 +3,10 @@ node = "localhost:6430"
 seed = ""
 name = "teller"
 
+# TODO:
+# [coinapi]
+# node = "172.104.145.6:9090"
+
 [dropper.BTC]
 # source determines where address balances are fetched from, "explorer" means
 # otc gets balances from a third party api, and "node" means otc uses a btcd 
