Saving of the price and source have been separated

--- a/otc-web-admin/package.json
+++ b/otc-web-admin/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^2.2.0",
     "react-router-dom": "^4.1.2",
     "react-switch": "^2.3.0",
+    "react-timeago": "^3.4.3",
     "styled-components": "^2.1.1",
     "styled-system": "1.0.0-4"
   },
