--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ matrix:
       install:
         - go get -t ./otc/...
       sudo: required
-      before_script: cd otc
+      before_script: 
+        - cd otc
       script: 
         - go build
     - language: node_js
@@ -16,4 +17,4 @@ matrix:
           - cd otc-web
           - yarn install
         script:
-          yarn build
+          - yarn build
