--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,31 @@ matrix:
   include:
     - language: go
       go: 1.9
-      install:
-        - go get -t ./otc/...
       sudo: required
       before_script: 
         - cd otc
+        - go get -t ./...
       script: 
         - go build
+      after_success:
+        - 
     - language: node_js
-        node_js: 8
-        before_install:
-          - npm install -g yarn --cache-min 999999999
-        before_script: 
-          - cd otc-web
-          - yarn install
-        script:
-          - yarn build
+      node_js: 
+        - "8"
+      before_install:
+        - npm install -g yarn --cache-min 999999999
+      before_script: 
+        - cd otc-web
+        - yarn install
+      script:
+        - yarn build
+    - language: node_js
+      node_js: 
+        - "8"
+      before_install:
+        - npm install -g yarn --cache-min 999999999
+      before_script: 
+        - cd otc-web-admin
+        - yarn install
+      script:
+        - yarn build
