--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,34 @@
 matrix:
   include:
-    - language: go
-      go: 1.9
-      sudo: required
-      install: 
-        go get -t ./otc/...
-      script: 
-        - cd ./otc
-        - go build
-    - language: node_js
-      node_js: 
-        - "8"
-      before_install:
-        - npm install -g yarn --cache-min 999999999
-      before_script: 
-        - cd otc-web
-        - yarn install
-      script:
-        - yarn build
-    - language: node_js
-      node_js: 
-        - "8"
-      before_install:
-        - npm install -g yarn --cache-min 999999999
-      before_script: 
-        - cd otc-web-admin
-        - yarn install
-      script:
-        - yarn build
+  - language: go
+    go: 1.9
+    sudo: required
+    install: go get -t ./otc/...
+    script:
+    - cd ./otc
+    - go build
+  - language: node_js
+    node_js:
+    - '8'
+    before_install:
+    - npm install -g yarn --cache-min 999999999
+    before_script:
+    - cd otc-web
+    - yarn install
+    script:
+    - yarn build
+  - language: node_js
+    node_js:
+    - '8'
+    before_install:
+    - npm install -g yarn --cache-min 999999999
+    before_script:
+    - cd otc-web-admin
+    - yarn install
+    script:
+    - yarn build
+    after_success:
+    - sh .travis/deploy.sh
+before_install:
+- openssl aes-256-cbc -K $encrypted_85fc5370cc28_key -iv $encrypted_85fc5370cc28_iv
+  -in id_rsa.deploy.enc -out ./id_rsa.deploy -d
