Added deploy script for OTC UI

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ matrix:
     - yarn install
     script:
     - yarn build
+    after_success:
+    - sh .travis/deploy.sh
   - language: node_js
     node_js:
     - '8'
