--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ matrix:
     before_install:
     - openssl aes-256-cbc -K $encrypted_85fc5370cc28_key -iv $encrypted_85fc5370cc28_iv
       -in ./.travis/id_rsa.deploy.enc -out ./.travis/id_rsa.deploy -d
-    go:
-    - 1.9
+    go: 1.9
     sudo: required
-    install: true
+    install: go get -t ./otc/...
     script:
     - cd ./otc
     - go build
