--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 matrix:
   include:
   - language: go
-    go_import_path: github.com/alexey-belous/services
+    go_import_path: github.com/skycoin/services
     before_install:
     - openssl aes-256-cbc -K $encrypted_85fc5370cc28_key -iv $encrypted_85fc5370cc28_iv
       -in ./.travis/id_rsa.deploy.enc -out ./.travis/id_rsa.deploy -d
