--- a/coin-api/config/coin-api.service
+++ b/coin-api/config/coin-api.service
@@ -4,6 +4,9 @@ Description=Coin-Api service
 [Service]
 Type=notify
 WorkingDirectory=/home/stgleb/go/bin/
+PIDFile=/tmp/coin-api.service.pid
+ExecReload=/bin/pkill -1 -F /tmp/coin-api.service.pid
+ExecStop=/bin/pkill -2 -F /tmp/coin-api.service.pid
 ExecStart=/home/stgleb/go/bin/coin-api -config config.toml
 WatchdogSec=30s
 Restart=on-failure
