Integrate with watcher

--- a/coin-api/cmd/server/config.toml
+++ b/coin-api/cmd/server/config.toml
@@ -1,11 +1,6 @@
 [bitcoin]
-NodeAddress="23.92.24.9:8334"
-User="YnWD3EmQAOw11IOrUJwWxAThAyobwLC"
-Password='f*Z"[1215o{qKW{Buj/wheO8@h.}j*u'
-CertFile="btcd.cert"
-TLS=true
 BlockExplorer="https://api.blockcypher.com"
-BlockDepth=2
+WatcherUrl="http://localhost:8080"
 
 [skycoin]
 Host="127.0.0.1"
