--- a/hardware-wallet/tiny-firmware/bootloader/Makefile
+++ b/hardware-wallet/tiny-firmware/bootloader/Makefile
@@ -41,6 +41,12 @@ CFLAGS += -DSIGNATURE_PROTECT=1
 else
 CFLAGS += -DSIGNATURE_PROTECT=0
 endif
+
+ifeq ($(SIGNATURE_DEBUG),1)
+CFLAGS += -DSIGNATURE_DEBUG=1
+else
+CFLAGS += -DSIGNATURE_DEBUG=0
+endif
 OPTFLAGS ?= -Os
 
 LDSCRIPT = bootloader-memory.ld
