--- a/hardware-wallet/tiny-firmware/Makefile
+++ b/hardware-wallet/tiny-firmware/Makefile
@@ -1,29 +1,36 @@
 APPVER = 1.0.0
-CFLAGS += -DAPPVER=$(APPVER)
 
 #libtrezor.a
+ifneq ($(EMULATOR),1)
+CFLAGS += -DAPPVER=$(APPVER)
 OBJS += startup.o
+OBJS += timer.o
+OBJS += setup.o
+else
+LDFLAGS  += -L$(TOP_DIR)emulator
+LDLIBS   += -lemulator
+LIBDEPS  += $(TOP_DIR)emulator/libemulator.a
+endif
 OBJS += buttons.o
 OBJS += layout.o
 OBJS += oled.o
 OBJS += rng.o
-OBJS += serialno.o
-OBJS += setup.o
 OBJS += util.o
 OBJS += memory.o
-OBJS += timer.o
 OBJS += gen/bitmaps.o
 OBJS += gen/fonts.o
-
 #end libtrezor.a
+
+ifneq ($(EMULATOR),1)
 LDSCRIPT  = memory.ld
 LDLIBS   += -lopencm3_stm32f2
 LIBDEPS  += $(TOOLCHAIN_DIR)/lib/libopencm3_stm32f2.a
+endif
 
 DEBUG_LINK ?= 0
 CFLAGS += -Wno-sequence-point
 CFLAGS += -I$(TOP_DIR)vendor/nanopb -Iprotob -DPB_FIELD_16BIT=1
-CFLAGS += -DQR_MAX_VERSION=0
+# CFLAGS += -DQR_MAX_VERSION=0
 CFLAGS += -DDEBUG_LINK=$(DEBUG_LINK)
 CFLAGS += -DDEBUG_LOG=$(DEBUG_LOG)
 
@@ -34,7 +41,11 @@ OBJS += $(TOP_DIR)vendor/nanopb/pb_common.o
 OBJS += $(TOP_DIR)vendor/nanopb/pb_decode.o
 OBJS += $(TOP_DIR)vendor/nanopb/pb_encode.o
 
+ifneq ($(EMULATOR),1)
 OBJS += firmware/usb.o
+else
+OBJS += firmware/udp.o
+endif
 OBJS += firmware/trezor.o
 OBJS += firmware/layout2.o
 OBJS += firmware/storage.o
@@ -68,6 +79,28 @@ OBJS += $(TOP_DIR)vendor/skycoin-crypto/tools/secp256k1.o
 OBJS += $(TOP_DIR)vendor/skycoin-crypto/trezor-tools/bip39.o
 OBJS += $(TOP_DIR)vendor/skycoin-crypto/trezor-tools/pbkdf2.o
 #end trezor-crypto
+
+
+ifeq ($(EMULATOR),1)
+CFLAGS   += -DEMULATOR=1
+
+CFLAGS += -Wno-pointer-to-int-cast
+CFLAGS += -Wno-int-to-pointer-cast
+
+CFLAGS   += -include $(TOP_DIR)emulator/emulator.h
+CFLAGS   += -include stdio.h
+
+
+CFLAGS   += -DHEADLESS=1
+# ifeq ($(HEADLESS),1)
+# CFLAGS   += -DHEADLESS=1
+# else
+# CFLAGS   += -DHEADLESS=0
+
+# CFLAGS   += -I/usr/include/SDL2 -D_REENTRANT
+# LDLIBS   += -lSDL2
+# endif
+endif
 
 NAME  = skycoin
 
