--- a/hardware-wallet/tiny-firmware/emulator/Makefile
+++ b/hardware-wallet/tiny-firmware/emulator/Makefile
@@ -9,14 +9,13 @@ HEADLESS ?= 0
 CFLAGS += -include stdio.h
 CFLAGS += -include $(TOP_DIR)emulator/emulator.h
 
+ifeq ($(HEADLESS),1)
 CFLAGS   += -DHEADLESS=1
-# ifeq ($(HEADLESS),1)
-# CFLAGS   += -DHEADLESS=1
-# else
-# CFLAGS   += -DHEADLESS=0
-# CFLAGS   += -I/usr/include/SDL2 -D_REENTRANT
-# LDLIBS   += -lSDL2
-# endif
+else
+CFLAGS   += -DHEADLESS=0
+CFLAGS   += -I/usr/include/SDL2 -D_REENTRANT
+LDLIBS   += -lSDL2
+endif
 
 OBJS += setup.o
 
