--- a/coin-api/Gopkg.toml
+++ b/coin-api/Gopkg.toml
@@ -57,7 +57,7 @@
   name = "github.com/spf13/viper"
   version = "1.0.2"
 
-[[constraint]]
+[[override]]
   name = "github.com/stretchr/testify"
   version = "1.2.1"
 
