--- a/hardware-wallet/tiny-firmware/Makefile
+++ b/hardware-wallet/tiny-firmware/Makefile
@@ -52,6 +52,8 @@ OBJS += firmware/storage.o
 OBJS += firmware/messages.o
 OBJS += firmware/fsm.o
 OBJS += firmware/protect.o
+OBJS += firmware/pinmatrix.o
+OBJS += firmware/reset.o
 
 OBJS += protob/messages.pb.o
 OBJS += protob/types.pb.o
