Added recovery mechanism and corresponding messages in protobuf

--- a/hardware-wallet/tiny-firmware/Makefile
+++ b/hardware-wallet/tiny-firmware/Makefile
@@ -55,6 +55,7 @@ OBJS += firmware/fsm.o
 OBJS += firmware/protect.o
 OBJS += firmware/pinmatrix.o
 OBJS += firmware/reset.o
+OBJS += firmware/recovery.o
 
 OBJS += protob/messages.pb.o
 OBJS += protob/types.pb.o
