--- a/testenvironment/docker-compose.yaml
+++ b/testenvironment/docker-compose.yaml
@@ -8,6 +8,7 @@ networks:
     attachable: true
 
 services:
+  # Load balancer and reverse proxy
   traefik:
     image: traefik:1.6.4
     command:
@@ -34,12 +35,12 @@ services:
       restart_policy:
         condition: on-failure
 
+  # Skycoin node own image that allows to know the address of the other nodes
   skycoin-node:
     image: ivcosla/sky-node:v0.0.1
     networks:
       - skynodes
     command:
-    #- "-localhost-only"
     - "-disable-csrf" # Not sure if we want that
     logging:
       driver: "json-file"
@@ -57,6 +58,8 @@ services:
         traefik.api.frontend.rule: "PathPrefix: /api"
         traefik.api.protocol: "http"
 
+  # 3 cockroachdb instance, deployed on fixed nodes because
+  # they are stateful service using local volume drivers
   cockroachdb-1:
     image: cockroachdb/cockroach:v2.0.3
     networks:
@@ -77,6 +80,7 @@ services:
       placement:
         constraints:
           - node.labels.cockroachdb_1 == true
+# Cannot make the dashboard work behind traefik
 #      labels:
 #        traefik.db-dashboard.port: "8080"
 #        traefik.db-dashboard.frontend.rule: "PathPrefixStrip: /db-dashboard"
@@ -120,18 +124,6 @@ services:
         constraints:
           - node.labels.cockroachdb_3 == true
 
-#  cockroachdb-cluster-init:
-#    image: registry:5000/cockroach:v2.0.3
-#    networks:
-#      - cockroachdb
-#    command:
-#      - "init"
-#      - "--host=skystack_cockroachdb-1"
-#      - "--insecure"
-#    depends_on:
-#      - cockroachdb-1
-#      - cockroachdb-2
-#      - cockroachdb-3
 volumes:
   cockroachdb-1:
   cockroachdb-2:
