--- a/coin-api/Gopkg.toml
+++ b/coin-api/Gopkg.toml
@@ -30,6 +30,10 @@
   version = "0.3.0"
 
 [[constraint]]
+  branch = "master"
+  name = "github.com/btcsuite/btcd"
+
+[[constraint]]
   name = "github.com/coreos/go-systemd"
   version = "16.0.0"
 
@@ -51,7 +55,7 @@
 
 [[constraint]]
   name = "github.com/skycoin/skycoin"
-  version = "0.23.0"
+  version = "0.20.4"
 
 [[constraint]]
   name = "github.com/spf13/viper"
