added swarm updater

--- a/autoupdater/Gopkg.toml
+++ b/autoupdater/Gopkg.toml
@@ -32,6 +32,10 @@
   name = "github.com/Sirupsen/logrus"
   version = "v1.0.5"
 
+[[constraing]]
+  name = "github.com/docker/docker/client"
+  version = "facad557440a0c955beb615495b8d0175f25e4e3"
+
 [prune]
   go-tests = true
   unused-packages = true
