Fixing flash memory problem
Missing important callback that perform the paralelism configuration

--- a/hardware-wallet/tiny-firmware/Makefile
+++ b/hardware-wallet/tiny-firmware/Makefile
@@ -6,6 +6,7 @@ CFLAGS += -DAPPVER=$(APPVER)
 OBJS += startup.o
 OBJS += timer.o
 OBJS += setup.o
+OBJS += supervise.o
 else
 OBJS += emulator/setup.o
 LDFLAGS  += -L$(TOP_DIR)emulator
