refactor and unit tested

--- a/autoupdater/Gopkg.toml
+++ b/autoupdater/Gopkg.toml
@@ -36,6 +36,10 @@
   name = "github.com/fsouza/go-dockerclient"
   version = "v1.2.2"
 
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "v1.2.2"
+
 [prune]
   go-tests = true
   unused-packages = true
