--- a/hardware-wallet/tiny-firmware/bootloader/Makefile
+++ b/hardware-wallet/tiny-firmware/bootloader/Makefile
@@ -8,6 +8,8 @@ OBJS += ../oled.o
 OBJS += ../rng.o
 OBJS += ../serialno.o
 OBJS += ../setup.o
+OBJS += ../supervise.o
+OBJS += ../timer.o
 OBJS += ../util.o
 OBJS += ../memory.o
 OBJS += ../gen/bitmaps.o
