--- a/.travis.yml
+++ b/.travis.yml
@@ -65,8 +65,9 @@ matrix:
       - export CHECK_PATH=$PWD
       - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CHECK_PATH/src
       - cd -
-      #install sdl&& \
-      - sudo apt-get install -y build-essential curl unzip git python3 python3-pip python-protobuf
+      #install build tools
+      - sudo apt-get install -y build-essential curl unzip git python3 python3-pip python-protobuf gcc-arm-none-eabi
+      #install sdl
       - sudo apt-get install -y libegl1-mesa-dev libgles2-mesa-dev libsdl2-dev libsdl2-image-dev
       #install protobuf
       - curl -LO "https://github.com/google/protobuf/releases/download/v${PROTOBUF_VERSION}/protoc-${PROTOBUF_VERSION}-linux-x86_64.zip"
@@ -83,5 +84,7 @@ matrix:
       - ./test_skycoin_crypto
       - make clean
       - cd ../tiny-firmware
-      - export EMULATOR=1
-      - . make_firmware.sh
+      - export EMULATOR=1 ; ./make_firmware.sh
+      - export EMULATOR=0 ; make clean
+      - cd bootloader && ./prepare_signature.sh ; cd ..
+      - ./make_firmware.sh
