--- a/autoupdater/service_mapping_example.toml
+++ b/autoupdater/service_mapping_example.toml
@@ -1,3 +1,17 @@
+[global]
+updater="swarm"
+
+[active]
+interval="1h"
+tag="latest"
+repository="library/mariadb"
+name="dockerhub"
+service="maria"
+
+[passive]
+message-broker="nats"
+urls=["url1","url2"]
+
 [services]
 "skycoin/skycoin" = "library/mariadb"
 "top" = "skywire"
