--- a/hardware-wallet/tiny-firmware/Makefile.include
+++ b/hardware-wallet/tiny-firmware/Makefile.include
@@ -92,6 +92,12 @@ LDFLAGS  += -L$(TOP_DIR) \
 
 CFLAGS += -DFASTFLASH=0
 
+ifeq ($(REVERSE_SCREEN),1)
+CFLAGS   += -DREVERSE_SCREEN=1
+else
+CFLAGS   += -DREVERSE_SCREEN=0
+endif
+
 ifeq ($(EMULATOR),1)
 CFLAGS   += -DEMULATOR=1
 else
