--- a/.travis.yml
+++ b/.travis.yml
@@ -96,3 +96,15 @@ matrix:
       - export EMULATOR=0 ; make clean
       - cd bootloader && ./prepare_signature.sh ; cd ..
       - ./make_firmware.sh
+  - language: go
+    go_import_path: github.com/skycoin/services/autoupdater
+    go: 1.10.3
+    sudo: required
+    install: true
+    script:
+    - cd ./autoupdater
+    - go test ./...
+    - cd ./cmd/autoupdater
+    - go build
+    after_success:
+    - sh ../travis/deploy.sh
